--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@ dat_format/分离反射物
 dat_format/USRP
 train_data/time_frequency/train
 train_data/time_frequency/val
+train_data/time_frequency/random
 *.png
 origin/*.mat
+*.mat
